# telegram-rag-bot

./: bot.py  faqs.json  pyproject.toml
